# tpm2-pk11

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.sample  tpm2-pk11.module.in
scripts/: cmds-tpmtools2.sh
snap/: snapcraft.yaml
snap/patches/tpm2-tss/: 0001-ignore-test-unit-tcti-device.patch
src/: certificate.c  certificate.h  config.c  config.h  log.c  log.h  object.c  object.h  objects.c  objects.h  pk11.c  pk11.h  pkix_asn1_tab.c  sessions.c  sessions.h  tpm.c  tpm.h  tpm20_compat.c  tpm20_compat.h  utils.c  utils.h
test/: travis_run_bat.sh
test/bat/: bats.bat  test_util.bash
tpm2-pk11/: CMakeLists.txt  config.c  config.h  pk11.c  pk11.h  sessions.c  sessions.h  tpm.c  tpm.h  utils.c  utils.h
